SFDCProject/src/objects/Sunrun_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sunrun_Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Legacy Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract Event</label>
        <referenceTo>Service_Contract_Event__c</referenceTo>
        <relationshipLabel>Sunrun_Audit_Trail</relationshipLabel>
        <relationshipName>Sunrun_Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Sunrun_Audit_Trail</relationshipLabel>
        <relationshipName>Sunrun_Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sunrun Audit Trail</label>
    <nameField>
        <label>Sunrun Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sunrun_Audit_Trail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>